# cubismo

./: .gitignore  README.md  cfm_model.ipynb  eval.py  pyproject.toml  requirements.txt
cubismo/model/: unet.py  unet_attention.py  unet_attention_2.py
cubismo/policy/: cfm_policy.py
cubismo/utils/: labels.py
docker/: Dockerfile  build.sh
scripts/: train.py  try_model.py
server/: app.py
train/: train.py
